--- a/requirements.txt
+++ b/requirements.txt
@@ -1,217 +1,16 @@
 # Core Dependencies
-Pillow  # Required for image handling
-mysql-connector-python  # MySQL database connector
-tkinter  # GUI framework
+requests>=2.28.0
 
 # Development Dependencies
-black  # Code formatter
-isort  # Import sorter
-flake8  # Code linter
-pytest  # Testing framework
-pylint  # Code analysis
-mypy  # Type checking
-coverage  # Code coverage
-sphinx  # Documentation generator
-twine  # Package distribution
-wheel  # Package building
+pytest>=7.0.0
+black>=22.0.0
+mypy>=0.910
+flake8>=4.0.0
 
-# Optional GUI Enhancements
-pygments  # Syntax highlighting
+# Documentation
+sphinx>=4.0.0
+sphinx-rtd-theme>=1.0.0
 
-# Optional Database Tools
-sqlalchemy  # SQLAlchemy ORM
-alembic  # Database migrations
-
-# Additional Dependencies
-csv  # CSV file handling
-pathlib  # Path manipulation
-re  # Regular expressions
-
-# Optional Testing Tools
-pytest-cov  # Coverage reporting
-pytest-mock  # Mocking framework
-pytest-asyncio  # Async testing
-
-# Optional Documentation Tools
-sphinx-rtd-theme  # Read the Docs theme
-sphinx-autodoc-typehints  # Type hint documentation
-
-# Optional Build Tools
-setuptools  # Package management
-types-setuptools  # Type stubs for setuptools
-
-# Optional Development Tools
-pre-commit  # Git hooks management
-mypy-extensions  # MyPy extensions
-python-dotenv  # Environment variables
-
-# Optional Performance Tools
-uvloop  # Asyncio event loop
-aiohttp  # Async HTTP client/server
-
-# Optional Security Tools
-cryptography  # Cryptographic recipes and primitives
-pycryptodome  # Cryptographic library
-
-# Optional Logging Tools
-structlog  # Structured logging
-python-json-logger  # JSON logging
-
-# Optional Monitoring Tools
-prometheus-client  # Prometheus metrics
-statsd  # StatsD client
-
-# Optional Caching Tools
-redis  # Redis client
-aioredis  # Async Redis client
-
-# Optional Queue Tools
-celery  # Distributed task queue
-kombu  # Messaging library
-
-# Optional Search Tools
-elasticsearch  # Elasticsearch client
-whoosh  # Full-text search engine
-
-# Optional Machine Learning Tools
-scikit-learn  # Machine learning library
-numpy  # Numerical computing
-pandas  # Data analysis
-
-# Optional Data Visualization Tools
-matplotlib  # Plotting library
-seaborn  # Statistical data visualization
-bokeh  # Interactive visualization
-
-# Optional Web Framework Tools
-fastapi  # Web framework
-uvicorn  # ASGI server
-jinja2  # Template engine
-
-# Optional Database Drivers
-mysql-connector-python  # MySQL database driver
-sqlite3  # SQLite database driver
-psycopg2-binary  # PostgreSQL database driver
-pymongo  # MongoDB database driver
-redis  # Redis database driver
-
-# Optional API Clients
-requests  # HTTP client
-httpx  # Async HTTP client
-aiohttp  # Async HTTP client/server
-
-# Optional Testing Tools (Additional)
-pytest-xdist  # Parallel testing
-pytest-timeout  # Test timeouts
-pytest-vcr  # VCR.py integration
-
-# Optional Documentation Tools (Additional)
-sphinx-tabs  # Tabbed content
-sphinx-copybutton  # Copy button for code blocks
-sphinx-autobuild  # Auto-rebuild documentation
-
-# Optional Build Tools (Additional)
-build  # PEP 517/518 build system
-hatchling  # Modern build system
-poetry  # Dependency management and packaging
-
-# Optional Development Tools (Additional)
-python-lsp-server  # Language server protocol
-pyright  # Static type checker
-debugpy  # Debug adapter
-
-# Optional Performance Tools (Additional)
-aiosqlite  # Async SQLite
-asyncpg  # Async PostgreSQL
-uvloop  # Asyncio event loop
-
-# Optional Security Tools (Additional)
-bandit  # Security linter
-safety  # Security vulnerability scanner
-pytaint  # Taint analysis
-
-# Optional Logging Tools (Additional)
-loguru  # Modern logging library
-structlog  # Structured logging
-python-json-logger  # JSON logging
-
-# Optional Monitoring Tools (Additional)
-prometheus-fastapi-instrumentator  # Prometheus metrics for FastAPI
-sentry-sdk  # Error tracking
-newrelic  # Application monitoring
-
-# Optional Caching Tools (Additional)
-redis-py-cluster  # Redis cluster client
-aioredis-cluster  # Async Redis cluster
-memcached  # Memcached client
-
-# Optional Queue Tools (Additional)
-rq  # Redis-backed queue
-flower  # Celery monitoring
-kafka-python  # Apache Kafka client
-
-# Optional Search Tools (Additional)
-pyes  # Elasticsearch client
-whoosh  # Full-text search engine
-sphinxsearch  # Sphinx search engine
-
-# Optional Machine Learning Tools (Additional)
-tensorflow  # Machine learning framework
-pytorch  # Machine learning framework
-scikit-learn  # Machine learning library
-
-# Optional Data Visualization Tools (Additional)
-plotly  # Interactive plots
-altair  # Declarative statistical visualization
-bokeh  # Interactive visualization
-
-# Optional Web Framework Tools (Additional)
-django  # Web framework
-flask  # Web framework
-fastapi  # Web framework
-
-# Optional Database Drivers (Additional)
-sqlalchemy-utils  # SQLAlchemy utilities
-alembic  # Database migrations
-sqlalchemy-migrate  # Database migrations
-
-# Optional API Clients (Additional)
-restkit  # REST client
-requests-oauthlib  # OAuth 1.0a and OAuth 2.0 support
-python-jose  # JSON Web Token implementation
-
-# Optional Testing Tools (Additional)
-pytest-cov  # Coverage reporting
-pytest-mock  # Mocking framework
-pytest-asyncio  # Async testing
-
-# Optional Documentation Tools (Additional)
-sphinx-autodoc-typehints  # Type hint documentation
-sphinxcontrib-apidoc  # API documentation
-sphinxcontrib-openapi  # OpenAPI documentation
-
-# Optional Build Tools (Additional)
-setuptools  # Package management
-types-setuptools  # Type stubs for setuptools
-wheel  # Package building
-
-# Optional Development Tools (Additional)
-pre-commit  # Git hooks management
-mypy-extensions  # MyPy extensions
-python-dotenv  # Environment variables
-
-# Optional Performance Tools (Additional)
-aiosqlite  # Async SQLite
-asyncpg  # Async PostgreSQL
-uvloop  # Asyncio event loop
-sqlite3-tools  # SQLite database management
-
-# Optional system tools
-psutil  # System monitoring
-
-# Optional logging
-loguru  # Enhanced logging
-
-# Optional UI testing
-pytest-qt  # Qt testing
-pytest-tkinter  # Tkinter testing
+# Testing
+pytest-cov>=3.0.0
+pytest-mock>=3.0.0
