--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 # Core Dependencies
 requests>=2.28.0
+mysql-connector-python>=8.0.0
+Pillow>=9.0.0  # For image handling
+python-dotenv>=0.19.0  # For environment variables
 
 # Development Dependencies
 pytest>=7.0.0
